fixed some spacings, and our team cards

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100%;
   min-height: 94px;
-  padding: 30px 0 30px 0;
+  padding: 15px 0 15px 0;
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(10px);
   transition: 600ms;
