--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -35,7 +35,7 @@
   text-align: center;
   cursor: pointer;
   background-color: inherit;
-  margin-top: 64px;
+  margin-top: 25px;
   padding: 30px 30px;
   color: var(--typography-white);
   border-color: var(--typography-white);
@@ -101,6 +101,10 @@
     line-height: 21.6px;
     font-size: 18px;
   }
+
+  .home_cta-button {
+    margin-top: -40px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
@@ -123,7 +127,7 @@
     padding-top: 100px;
   }
   .home_cta-button {
-    margin-top: 30px;
+    margin-top: -40px;
     padding: 40px 40px;
   }
 }
